# browser-window-popup

./: README.md  notes.md
application/: .gitignore  CMakeLists.txt  clipboard.hpp  logger.hpp  main.cpp  manifest-config.json  now.hpp  registry_remove.ps1  registry_update.ps1
application/.run/: registry_remove.ps1.run.xml  registry_update.ps1.run.xml
extension/: README.md  background.js  manifest.json  options.html  options.js  run-web-ext.ps1  stylesheet.css
extension/.run/: run-web-ext.ps1.run.xml
